Adding photos and creations galleries

--- a/gallery2.html
+++ b/gallery2.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Redox PROD</title>
+  <title>Redox PROD - Galeries</title>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
@@ -11,8 +11,6 @@
 
   <meta charset="utf-8">
   <script type="text/javascript" src="./assets/javascripts/projects.js"></script>
-
-  <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="./assets/fancybox-master/dist/jquery.fancybox.min.js"></script>
 
   <link rel="apple-touch-icon" sizes="57x57" href="./assets/images/favicon/apple-icon-57x57.png">
@@ -34,9 +32,25 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <br><br><br><br><br><br>
+  <br><br>
   <h2 style="text-align:center">Le site est actuellement en maintenance, merci de votre compréhension.</h2>
-  <br><br><br><br><br><br>
+  <section id="gallery" style="width: 1000px;margin-right: auto;margin-left: auto;">
+    <h1>Réalisations graphiques</h1>
+    <h2><i>Toutes les créations graphiques ont été réalisées par mes soins. Tous droits réservés.</i></h2>
+    <table>
+      <tr>
+        <td>
+          <a href="./assets/images/photos/2.jpg" data-fancybox data-caption="Description">
+            <img src="./assets/images/photos/2.jpg">
+            <p>Description</p>
+          </a>
+        </td>
+      </tr>
+    </table>
+  </section>
+  <div id="button">
+    <a href="index.html#work"><p>Retour au site</p></a>
+  </div>
   <footer>
     <p>© Cool Kids Crew 2017</p>
   </footer>
