--- a/gallery1.html
+++ b/gallery1.html
@@ -1,42 +1,107 @@
 <html>
 <head>
-  <title>Redox PROD</title>
+  <title>Redox PROD - Galeries</title>
+
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css"> 
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/application.css">
-
   <link rel="stylesheet" type="text/css" href="./assets/fancybox-master/dist/jquery.fancybox.min.css">
 
   <meta charset="utf-8">
   <script type="text/javascript" src="./assets/javascripts/projects.js"></script>
 
-  <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="./assets/fancybox-master/dist/jquery.fancybox.min.js"></script>
 
-  <link rel="apple-touch-icon" sizes="57x57" href="./assets/images/favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="./assets/images/favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="./assets/images/favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="./assets/images/favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="./assets/images/favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="./assets/images/favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="./assets/images/favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="./assets/images/favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="./assets/images/favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="./assets/images/favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon/favicon-16x16.png">
-  <link rel="manifest" href="./assets/images/favicon/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <br><br><br><br><br><br>
-  <h2 style="text-align:center">Le site est actuellement en maintenance, merci de votre compréhension.</h2>
-  <br><br><br><br><br><br>
+  <br><br><h2 style="text-align:center">Le site est actuellement en maintenance, merci de votre compréhension.</h2>
+  <section id="gallery" style="width: 1000px;margin-right: auto;margin-left: auto;">
+    <h1>Photographies</h1>
+    <h2><i>Toutes les photos ont été prises par mes soins. Tous droits réservés.</i></h2>
+    <table>
+      <tr>
+        <td>
+          <a href="./assets/images/photos/2.jpg" data-fancybox data-caption="Description">
+            <img src="./assets/images/photos/2.jpg">
+            <p>Description</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/3.jpg" data-fancybox data-caption="Description">
+            <img src="./assets/images/photos/3.jpg">
+            <p>Description</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/4.jpg" data-fancybox data-caption="Description">
+            <img src="./assets/images/photos/4.jpg">
+            <p>Description</p>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./assets/images/photos/5.jpg" data-fancybox data-caption="Description">
+            <img src="./assets/images/photos/5.jpg">
+            <p>Description</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/6.jpg" data-fancybox data-caption="Description">
+            <img src="./assets/images/photos/min_6.jpg">
+            <p>Description</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/7.jpg" data-fancybox data-caption="Description">
+            <img src="./assets/images/photos/7.jpg">
+            <p>Description</p>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./assets/images/photos/8.jpg" data-fancybox data-caption="Description">
+            <img src="./assets/images/photos/8.jpg">
+            <p>Description</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/9.jpg" data-fancybox data-caption="Description">
+            <img src="./assets/images/photos/9.jpg">
+            <p>Description</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/10.jpg" data-fancybox data-caption="Description">
+            <img src="./assets/images/photos/10.jpg">
+            <p>Description</p>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./assets/images/photos/11.jpg" data-fancybox data-caption="Description">
+            <img src="./assets/images/photos/11.jpg">
+            <p>Description</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/12.jpg" data-fancybox data-caption="Description">
+            <img src="./assets/images/photos/12.jpg">
+            <p>Description</p>
+          </a>
+        </td>
+        <td>
+        </td>
+      </tr>
+    </table>
+  </section>
+  <div id="button">
+    <a href="index.html#work"><p>Retour au site</p></a>
+  </div>
   <footer>
     <p>© Cool Kids Crew 2017</p>
   </footer>
