--- a/gallery2.html
+++ b/gallery2.html
@@ -34,7 +34,7 @@
 <body>
   <br><br>
   <h2 style="text-align:center">Le site est actuellement en maintenance, merci de votre compréhension.</h2>
-  <section id="gallery" style="width: 1000px;margin-right: auto;margin-left: auto;">
+  <section id="gallery" style="width: 1200px;margin-right: auto;margin-left: auto;">
     <h1>Réalisations graphiques</h1>
     <h2><i>Toutes les créations graphiques ont été réalisées par mes soins. Tous droits réservés.</i></h2>
     <table>
@@ -48,10 +48,11 @@
       </tr>
     </table>
   </section>
-  <div id="button">
-    <a href="index.html#work"><p>Retour au site</p></a>
+  <div style="text-align:center;margin:30px 0px;">
+    <a href="./index.html#work" class="button">Retour à l'accueil</a>
   </div>
-  <footer>
+</section>
+  <footer style="margin-top:50px;">
     <p>© Cool Kids Crew 2017</p>
   </footer>
 </body>
