--- a/index.html
+++ b/index.html
@@ -89,128 +89,126 @@
     <div class="showreel section-content">
       <iframe src="https://player.vimeo.com/video/214376110?portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
-    <!-- TEST -->
-  <section id="galleries" style="width:1000px;margin-left:auto;margin-right:auto;">
-    <h1 style="text-align:right">Vidéos</h1>
-    <table>
-      <tr>
-        <td>
-          <a data-fancybox href="https://vimeo.com/266120847">
-            <img src="assets/images/projects/min_bullebox.png">
-            <p>Bulle Box - Service de la Jeunesse</p>
-          </a>
 
-        </td>
-
-        <td>
-          <a data-fancybox href="https://vimeo.com/247694127">
-            <img src="assets/images/projects/min_buda.png">
-            <p>Sziget Festival 2017 - Budapest</p>
-          </a>
-        </td>
-
-        <td>
-          <a data-fancybox href="https://vimeo.com/220195324">
-            <img src="assets/images/projects/min_dentdebroc.png">
-            <p>Dent de Broc 2017</p>
-          </a>
-        </td>
-      </tr>
-
-      <tr>
-        <td>
-          <a data-fancybox href="https://vimeo.com/214376110">
-            <img src="assets/images/projects/min_showreel16.png">
-            <p>Showreel 2016</p>
-          </a>
-        </td>
-
-        <td>
-          <a data-fancybox href="https://vimeo.com/214411319">
-            <img src="assets/images/projects/min_gym.png">
-            <p>Soirée de gym 2016 - FSG Bulle</p>
-          </a>
-        </td>
-
-        <td>
-          <a data-fancybox href="https://www.youtube.com/watch?v=AkiyKayBtD0">
-            <img src="http://img.youtube.com/vi/AkiyKayBtD0/mqdefault.jpg">
-            <p>Alpha Youth Training 2016</p>
-          </a>
-        </td>
-      </tr>
-
-      <tr>
-        <td>
-          <a data-fancybox href="https://www.youtube.com/watch?v=iw9aRkh6fGE">
-            <img src="http://img.youtube.com/vi/iw9aRkh6fGE/mqdefault.jpg">
-            <p>Alpha Story - Christo</p>
-          </a>
-        </td>
-
-        <td>
-          <a data-fancybox href="https://www.youtube.com/watch?v=4gGOsYrpLY4">
-            <img src="assets/images/projects/min_SH.png">
-            <p>Soirée humoristique 2016 - CSud</p>
-          </a>
-        </td>
-
-        <td>
-          <a data-fancybox href="https://www.youtube.com/watch?v=w0GQ2Vjvtyc" data-caption="Description">
-            <img src="assets/images/projects/min_maxicamp.png">
-            <p>Maxi Camp 2015</p>
-          </a>
-        </td>
-      </tr>
-    </table>
-    <h1>Web design</h1>
-    <table>
-      <tr>
-        <td>
-          <a href="./assets/images/screenshots/bullebox.png" data-fancybox data-caption="Adresse de la page : http://centranim.ch/bullebox/order.html">
-            <img src="assets/images/projects/min_bulleboxweb.png">
-            <p>Formulaire de commande - Bulle Box</p>
-          </a>
-        </td>
-
-        <td>
-          <a href="./assets/images/screenshots/promyana.png" data-fancybox data-caption="Adresse du site : http://promyana.org/">
-            <img src="assets/images/projects/min_promyana.png">
-            <p>promyana.org</p>
-          </a>
-        </td>
-        <td>
-          <a href="./assets/images/screenshots/stiftung-mehrwert.png" data-fancybox data-caption="Adresse du site : http://stiftung-mehrwert.ch">
-
-            <img src="assets/images/screenshots/stiftung-mehrwert.png">
-
-            <p>stiftung-mehrwert.ch</p>
-          </a>
-        </td>
-      </tr>
-    </table>
-
-    <h1 style="text-align:right">Images</h1>
-    <table>
-      <tr>
-        <td>
-          <a href="./gallery1.html">
-            <img src="assets/images/projects/min_photo.jpg">
-            <p>Photographies</p>
-          </a>
-        </td>
-
-        <td>
-          <a href="./gallery2.html">
-            <img src="assets/images/projects/min_r2d2.png">
-            <p>Créations graphiques</p>
-          </a>
-        </td>
-      </tr>
-    </table>
-  </section>
-
-    <!-- FIN DE TEST -->
+    <section id="galleries" style="max-width:1200px;margin-left:auto;margin-right:auto;">
+      <h1 style="text-align:right">Vidéos</h1>
+      <table>
+        <tr>
+          <td>
+            <a data-fancybox href="https://vimeo.com/266120847">
+              <img src="./assets/images/projects/min_bullebox.png">
+              <p>Bulle Box - Service de la Jeunesse</p>
+            </a>
+  
+          </td>
+  
+          <td>
+            <a data-fancybox href="https://vimeo.com/247694127">
+              <img src="./assets/images/projects/min_buda.png">
+              <p>Sziget Festival 2017 - Budapest</p>
+            </a>
+          </td>
+  
+          <td>
+            <a data-fancybox href="https://vimeo.com/220195324">
+              <img src="./assets/images/projects/min_dentdebroc.png">
+              <p>Dent de Broc 2017</p>
+            </a>
+          </td>
+        </tr>
+  
+        <tr>
+          <td>
+            <a data-fancybox href="https://vimeo.com/214376110">
+              <img src="./assets/images/projects/min_showreel16.png">
+              <p>Showreel 2016</p>
+            </a>
+          </td>
+  
+          <td>
+            <a data-fancybox href="https://vimeo.com/214411319">
+              <img src="./assets/images/projects/min_gym.png">
+              <p>Soirée de gym 2016 - FSG Bulle</p>
+            </a>
+          </td>
+  
+          <td>
+            <a data-fancybox href="https://www.youtube.com/watch?v=AkiyKayBtD0">
+              <img src="http://img.youtube.com/vi/AkiyKayBtD0/mqdefault.jpg">
+              <p>Alpha Youth Training 2016</p>
+            </a>
+          </td>
+        </tr>
+  
+        <tr>
+          <td>
+            <a data-fancybox href="https://www.youtube.com/watch?v=iw9aRkh6fGE">
+              <img src="http://img.youtube.com/vi/iw9aRkh6fGE/mqdefault.jpg">
+              <p>Alpha Story - Christo</p>
+            </a>
+          </td>
+  
+          <td>
+            <a data-fancybox href="https://www.youtube.com/watch?v=4gGOsYrpLY4">
+              <img src="assets/images/projects/min_SH.png">
+              <p>Soirée humoristique 2016 - CSud</p>
+            </a>
+          </td>
+  
+          <td>
+            <a data-fancybox href="https://www.youtube.com/watch?v=w0GQ2Vjvtyc" data-caption="Description">
+              <img src="assets/images/projects/min_maxicamp.png">
+              <p>Maxi Camp 2015</p>
+            </a>
+          </td>
+        </tr>
+      </table>
+      <h1>Web design</h1>
+      <table>
+        <tr>
+          <td>
+            <a href="./assets/images/screenshots/bullebox.png" data-fancybox data-caption="Adresse de la page : http://centranim.ch/bullebox/order.html">
+              <img src="assets/images/projects/min_bulleboxweb.png">
+              <p>Formulaire de commande - Bulle Box</p>
+            </a>
+          </td>
+  
+          <td>
+            <a href="./assets/images/screenshots/promyana.png" data-fancybox data-caption="Adresse du site : http://promyana.org/">
+              <img src="assets/images/projects/min_promyana.png">
+              <p>promyana.org</p>
+            </a>
+          </td>
+          <td>
+            <a href="./assets/images/screenshots/stiftung-mehrwert.png" data-fancybox data-caption="Adresse du site : http://stiftung-mehrwert.ch">
+  
+              <img src="assets/images/screenshots/stiftung-mehrwert.png">
+  
+              <p>stiftung-mehrwert.ch</p>
+            </a>
+          </td>
+        </tr>
+      </table>
+  
+      <h1 style="text-align:right">Images</h1>
+      <table>
+        <tr>
+          <td>
+            <a href="./gallery1.html">
+              <img src="assets/images/projects/min_photo.jpg">
+              <p>Photographies</p>
+            </a>
+          </td>
+  
+          <td>
+            <a href="./gallery2.html">
+              <img src="assets/images/projects/min_r2d2.png">
+              <p>Créations graphiques</p>
+            </a>
+          </td>
+        </tr>
+      </table>
+    </section>
   </section>
 
   <section id="contact" class="full-height">
