--- a/gallery1.html
+++ b/gallery1.html
@@ -16,82 +16,81 @@
 
 </head>
 <body>
-  <br><br><h2 style="text-align:center">Le site est actuellement en maintenance, merci de votre compréhension.</h2>
   <section id="gallery" style="max-width: 1200px;margin-right: auto;margin-left: auto;">
     <h1>Photographies</h1>
     <h2><i>Toutes les photos ont été prises par mes soins. Tous droits réservés.</i></h2>
     <table>
       <tr>
         <td>
-          <a href="./assets/images/photos/2.jpg" data-fancybox data-caption="Description">
+          <a href="./assets/images/photos/2.jpg" data-fancybox data-caption="Couché de soleil sur la place d'armes de Thun CH, avril 2017.">
             <img src="./assets/images/photos/2.jpg">
-            <p>Description</p>
+            <p>Thun Waffenplatz - avr 17</p>
           </a>
         </td>
         <td>
-          <a href="./assets/images/photos/3.jpg" data-fancybox data-caption="Description">
+          <a href="./assets/images/photos/3.jpg" data-fancybox data-caption="Couché de soleil sur la verte Gruyère, avril 2017.">
             <img src="./assets/images/photos/3.jpg">
-            <p>Description</p>
+            <p>La Gruyère - avr 17</p>
           </a>
         </td>
         <td>
-          <a href="./assets/images/photos/4.jpg" data-fancybox data-caption="Description">
+          <a href="./assets/images/photos/4.jpg" data-fancybox data-caption="Levé de soleil hivernal sur la place d'armes de Thun CH, mars 2017.">
             <img src="./assets/images/photos/4.jpg">
-            <p>Description</p>
+            <p>Thun Waffenplatz - mar 17</p>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="./assets/images/photos/5.jpg" data-fancybox data-caption="Description">
+          <a href="./assets/images/photos/5.jpg" data-fancybox data-caption="Levé de soleil à travers la forêt durant un exercice, Thun CH, mars 2017.">
             <img src="./assets/images/photos/5.jpg">
-            <p>Description</p>
+            <p>Thun - mar 17</p>
           </a>
         </td>
         <td>
-          <a href="./assets/images/photos/6.jpg" data-fancybox data-caption="Description">
+          <a href="./assets/images/photos/6.jpg" data-fancybox data-caption="Panorama capturé lors d'une virée à moto, au Col des Mosses CH, mars 2017.">
             <img src="./assets/images/photos/min_6.jpg">
-            <p>Description</p>
+            <p>Col des Mosses, ma - 17</p>
           </a>
         </td>
         <td>
-          <a href="./assets/images/photos/7.jpg" data-fancybox data-caption="Description">
+          <a href="./assets/images/photos/7.jpg" data-fancybox data-caption="Instant capturé le premier jour de l'année 2017.">
             <img src="./assets/images/photos/7.jpg">
-            <p>Description</p>
+            <p>Happy New Year - jan 17</p>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="./assets/images/photos/8.jpg" data-fancybox data-caption="Description">
+          <a href="./assets/images/photos/8.jpg" data-fancybox data-caption="Soirée au sein de l'Ecole blindés de l'Armée Suisse, Thun CH, décembre 2016.">
             <img src="./assets/images/photos/8.jpg">
-            <p>Description</p>
+            <p>Thun - déc 16</p>
           </a>
         </td>
         <td>
-          <a href="./assets/images/photos/9.jpg" data-fancybox data-caption="Description">
+          <a href="./assets/images/photos/9.jpg" data-fancybox data-caption="Exercice matinal, Thun CH, novembre 2016.">
             <img src="./assets/images/photos/9.jpg">
-            <p>Description</p>
+            <p>Thun - nov 16</p>
           </a>
         </td>
         <td>
-          <a href="./assets/images/photos/10.jpg" data-fancybox data-caption="Description">
+          <a href="./assets/images/photos/10.jpg" data-fancybox data-caption="Levé de soleil sur la piste des chars de Thun CH, novembre 2016.">
             <img src="./assets/images/photos/10.jpg">
-            <p>Description</p>
+            <p>Thun Panzerpiste - nov 16</p>
           </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="./assets/images/photos/11.jpg" data-fancybox data-caption="Description">
+          <a href="./assets/images/photos/11.jpg" data-fancybox data-caption="Le vrai et l'unique Stockhorn, Thun CH, novembre 2016.">
             <img src="./assets/images/photos/11.jpg">
-            <p>Description</p>
+            <p>Thun - nov 16</p>
           </a>
         </td>
         <td>
-          <a href="./assets/images/photos/12.jpg" data-fancybox data-caption="Description">
+          <a href="./assets/images/photos/12.jpg" data-fancybox data-caption="Couché de soleil depuis la Chia, en Gruyère, octobre 2016.">
             <img src="./assets/images/photos/12.jpg">
-            <p>Description</p>
+            <p>La Chia - oct 16</p>
           </a>
         </td>
         <td>
