--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <tr>
           <td>
             <a data-fancybox href="https://vimeo.com/266120847">
-              <img src="./assets/images/projects/min_bullebox.png">
+              <img src="./assets/images/projects/min_bullebox.PNG">
               <p>Bulle Box - Service de la Jeunesse</p>
             </a>
   
@@ -104,14 +104,14 @@
   
           <td>
             <a data-fancybox href="https://vimeo.com/247694127">
-              <img src="./assets/images/projects/min_buda.png">
+              <img src="./assets/images/projects/min_buda.PNG">
               <p>Sziget Festival 2017 - Budapest</p>
             </a>
           </td>
   
           <td>
             <a data-fancybox href="https://vimeo.com/220195324">
-              <img src="./assets/images/projects/min_dentdebroc.png">
+              <img src="./assets/images/projects/min_dentdebroc.PNG">
               <p>Dent de Broc 2017</p>
             </a>
           </td>
@@ -120,7 +120,7 @@
         <tr>
           <td>
             <a data-fancybox href="https://vimeo.com/214376110">
-              <img src="./assets/images/projects/min_showreel16.png">
+              <img src="./assets/images/projects/min_showreel16.PNG">
               <p>Showreel 2016</p>
             </a>
           </td>
@@ -167,7 +167,7 @@
       <table>
         <tr>
           <td>
-            <a href="./assets/images/screenshots/bullebox.png" data-fancybox data-caption="Adresse de la page : http://centranim.ch/bullebox/order.html">
+            <a href="./assets/images/screenshots/bullebox.PNG" data-fancybox data-caption="Adresse de la page : http://centranim.ch/bullebox/order.html">
               <img src="assets/images/projects/min_bulleboxweb.png">
               <p>Formulaire de commande - Bulle Box</p>
             </a>
