--- a/gallery2.html
+++ b/gallery2.html
@@ -32,17 +32,61 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <br><br>
-  <h2 style="text-align:center">Le site est actuellement en maintenance, merci de votre compréhension.</h2>
   <section id="gallery" style="width: 1200px;margin-right: auto;margin-left: auto;">
     <h1>Réalisations graphiques</h1>
     <h2><i>Toutes les créations graphiques ont été réalisées par mes soins. Tous droits réservés.</i></h2>
     <table>
       <tr>
         <td>
-          <a href="./assets/images/photos/2.jpg" data-fancybox data-caption="Description">
-            <img src="./assets/images/photos/2.jpg">
-            <p>Description</p>
+          <a href="./assets/images/creations/8.png" data-fancybox data-caption="Digital Painting du célèbre droïde R2-D2">
+            <img src="./assets/images/creations/8.png">
+            <p>R2-D2 - Digital Painting</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/creations/7.png" data-fancybox data-caption="Création d'un fond d'écran en 2D, inspiré du site www.firewatchgame.com">
+            <img src="./assets/images/creations/7.png">
+            <p>The Firewatch - Digital Painting</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/creations/6.png" data-fancybox data-caption="Logo créé pour le groupe de hard rock 'Deathless'.">
+            <img src="./assets/images/creations/6.png">
+            <p>Logo du groupe "Deathless"</p>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./assets/images/creations/5.png" data-fancybox data-caption="Dans la suite des travaux avec comme thème 'Top Gun', fond d'écran en 2D, avec Digital Painting.">
+            <img src="./assets/images/creations/5.png">
+            <p>Top Gun Wallpaper - Digital Painting</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/creations/4.png" data-fancybox data-caption="Même série de travaux : 'Top Gun'.">
+            <img src="./assets/images/creations/4.png">
+            <p>Maverick Wallpaper - Digital Painting</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/creations/3.png" data-fancybox data-caption="Montage Photoshop pour un ami, fan de Top Gun.">
+            <img src="./assets/images/creations/3.png">
+            <p>You're dangerous, Maverick - Photo-montage</p>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./assets/images/creations/2.png" data-fancybox data-caption="Travail de vectorisation, en se basant sur une photographie.">
+            <img src="./assets/images/creations/2.png">
+            <p>Wolf - Vector Painting</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/creations/1.png" data-fancybox data-caption="Logo créé pour un projet de la paroisse réformée de Bulle.">
+            <img src="./assets/images/creations/1.png">
+            <p>Logo pour la Paroisse réformée de Bulle</p>
           </a>
         </td>
       </tr>
