new pics and creations

--- a/gallery1.html
+++ b/gallery1.html
@@ -22,6 +22,88 @@
     <table>
       <tr>
         <td>
+          <a href="./assets/images/photos/22.jpg" data-fancybox data-caption="Couché de soleil sur la Gruyère, depuis la Dent de Broc (1829m).">
+            <img src="./assets/images/photos/22.jpg">
+            <p>Dent de Broc - avr 18</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/21.jpg" data-fancybox data-caption="Levé de soleil sur le Moléson, depuis les bords du lac de la Gruyère.">
+            <img src="./assets/images/photos/21.jpg">
+            <p>La Gruyère - jan 18</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/20.jpg" data-fancybox data-caption="Premier essai à l'astrophotographie: la Voie Lactée.">
+            <img src="./assets/images/photos/20.jpg">
+            <p>Voie lactée - aoû 17</p>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./assets/images/photos/19.jpg" data-fancybox data-caption="Couché de soleil sur le Léman, depuis le Teysachaux (1909m).">
+            <img src="./assets/images/photos/19.jpg">
+            <p>Teysachaux - aoû 17</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/16.jpg" data-fancybox data-caption="Plan drone du Teysachaux.">
+            <img src="./assets/images/photos/16.jpg">
+            <p>Teysachaux - aoû 17</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/17.jpg" data-fancybox data-caption="Levé de soleil sur le Mont Bifé, le lendemain de la fête nationale.">
+            <img src="./assets/images/photos/17.jpg">
+            <p>Mont Bifé - aoû 17</p>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./assets/images/photos/18.jpg" data-fancybox data-caption="Couché de soleil durant une balade avec le chien.">
+            <img src="./assets/images/photos/18.jpg">
+            <p>Epagny - dec 17</p>
+          </a>
+        </td>
+
+        <td>
+          <a href="./assets/images/photos/15-2.jpg" data-fancybox data-caption="Couché de soleil sur la place d'arme de Bure, juste avant le départ en exercice de nuit.">
+            <img src="./assets/images/photos/15-2.jpg">
+            <p>Bure - oct 17</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/15.jpg" data-fancybox data-caption="Levé de soleil sur la Dent de Broc, d'en bas.">
+            <img src="./assets/images/photos/15.jpg">
+            <p>La Dent de Broc - jan 18</p>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./assets/images/photos/14-2.jpg" data-fancybox data-caption="Photo capturé depuis Moléson-village.">
+            <img src="./assets/images/photos/14-2.jpg">
+            <p>La Gruyère - jul 17</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/14.jpg" data-fancybox data-caption="Portraits en terrasse, lors d'un voyage à Budapest.">
+            <img src="./assets/images/photos/14.jpg">
+            <p>Budapest - aoû 17</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/photos/13.png" data-fancybox data-caption="Petite séance de shooting au pied du chateau de Gruyère.">
+            <img src="./assets/images/photos/13.png">
+            <p>Chateau et moto - jun 17</p>
+          </a>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
           <a href="./assets/images/photos/2.jpg" data-fancybox data-caption="Couché de soleil sur la place d'armes de Thun CH, avril 2017.">
             <img src="./assets/images/photos/2.jpg">
             <p>Thun Waffenplatz - avr 17</p>
@@ -49,8 +131,8 @@
         </td>
         <td>
           <a href="./assets/images/photos/6.jpg" data-fancybox data-caption="Panorama capturé lors d'une virée à moto, au Col des Mosses CH, mars 2017.">
-            <img src="./assets/images/photos/min_6.jpg">
-            <p>Col des Mosses, ma - 17</p>
+            <img src="./assets/images/photos/6_min.jpg">
+            <p>Col des Mosses, mar - 17</p>
           </a>
         </td>
         <td>
@@ -99,7 +181,7 @@
     </table>
   </section>
   <div style="text-align:center;margin:30px 0px;">
-    <a href="./index.html#work" class="button">Retour à l'accueil</a>
+    <a href="./index.html" class="button" >Retour à l'accueil</a>
   </div>
   <footer style="margin-top:50px;">
     <p>© Cool Kids Crew 2017</p>
