--- a/gallery2.html
+++ b/gallery2.html
@@ -38,11 +38,26 @@
     <table>
       <tr>
         <td>
+          <a href="./assets/images/creations/10.png" data-fancybox data-caption="Flyer pour la société de musique <<l'Echo des Bois>>">
+            <img src="./assets/images/creations/10.png">
+            <p>Flyer pour la société de musique "l'Echo des Bois"</p>
+          </a>
+        </td>
+        <td>
+          <a href="./assets/images/creations/9.png" data-fancybox data-caption="Fond d'écran avec le symbole des explorateurs de l'armée suisse.">
+            <img src="./assets/images/creations/9.png">
+            <p>Sabers Wallpaper - Photoshop</p>
+          </a>
+        </td>
+        <td>
           <a href="./assets/images/creations/8.png" data-fancybox data-caption="Digital Painting du célèbre droïde R2-D2">
             <img src="./assets/images/creations/8.png">
             <p>R2-D2 - Digital Painting</p>
           </a>
         </td>
+      </tr>
+
+      <tr>
         <td>
           <a href="./assets/images/creations/7.png" data-fancybox data-caption="Création d'un fond d'écran en 2D, inspiré du site www.firewatchgame.com">
             <img src="./assets/images/creations/7.png">
@@ -55,14 +70,15 @@
             <p>Logo du groupe "Deathless"</p>
           </a>
         </td>
-      </tr>
-      <tr>
         <td>
           <a href="./assets/images/creations/5.png" data-fancybox data-caption="Dans la suite des travaux avec comme thème 'Top Gun', fond d'écran en 2D, avec Digital Painting.">
             <img src="./assets/images/creations/5.png">
             <p>Top Gun Wallpaper - Digital Painting</p>
           </a>
         </td>
+      </tr>
+
+      <tr>
         <td>
           <a href="./assets/images/creations/4.png" data-fancybox data-caption="Même série de travaux : 'Top Gun'.">
             <img src="./assets/images/creations/4.png">
@@ -75,14 +91,15 @@
             <p>You're dangerous, Maverick - Photo-montage</p>
           </a>
         </td>
-      </tr>
-      <tr>
         <td>
           <a href="./assets/images/creations/2.png" data-fancybox data-caption="Travail de vectorisation, en se basant sur une photographie.">
             <img src="./assets/images/creations/2.png">
             <p>Wolf - Vector Painting</p>
           </a>
         </td>
+      </tr>
+
+      <tr>
         <td>
           <a href="./assets/images/creations/1.png" data-fancybox data-caption="Logo créé pour un projet de la paroisse réformée de Bulle.">
             <img src="./assets/images/creations/1.png">
@@ -93,7 +110,7 @@
     </table>
   </section>
   <div style="text-align:center;margin:30px 0px;">
-    <a href="./index.html#work" class="button">Retour à l'accueil</a>
+    <a href="./index.html" class="button" >Retour à l'accueil</a>
   </div>
 </section>
   <footer style="margin-top:50px;">
