.png syntaxe error correction

--- a/NEW/index.html
+++ b/NEW/index.html
@@ -129,25 +129,25 @@
     <section id="gallery-video" style="border-bottom:solid white 1px" class="flex-gallery">
       <div class="gallery-item">
         <a data-fancybox href="https://vimeo.com/266120847">
-          <img src="./assets/images/projects/min_bullebox.PNG">
+          <img src="./assets/images/projects/min_bullebox.png">
           <p>Bulle Box - Service de la Jeunesse</p>
         </a>
       </div>
       <div class="gallery-item">
         <a data-fancybox href="https://vimeo.com/247694127">
-          <img src="./assets/images/projects/min_buda.PNG">
+          <img src="./assets/images/projects/min_buda.png">
           <p>Sziget Festival 2017 - Budapest</p>
         </a>
       </div>
       <div class="gallery-item">
         <a data-fancybox href="https://vimeo.com/220195324">
-          <img src="./assets/images/projects/min_dentdebroc.PNG">
+          <img src="./assets/images/projects/min_dentdebroc.png">
           <p>Dent de Broc 2017</p>
         </a>
       </div>
       <div class="gallery-item">
         <a data-fancybox href="https://vimeo.com/214376110">
-          <img src="./assets/images/projects/min_showreel16.PNG">
+          <img src="./assets/images/projects/min_showreel16.png">
           <p>Showreel 2016</p>
         </a>
       </div>
