new flaticons + mobile version in progress
mobile version : until the presentation section, not included

--- a/NEW/index.html
+++ b/NEW/index.html
@@ -31,8 +31,9 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>  
+<body>
   <nav id="navbar">
     <ul>
       <li><a href="#home">Accueil</a></li>
@@ -57,13 +58,13 @@
       <img class="logo-text" src="./assets/images/home/redox_text.png">
       <div class="bullet">
         <a href="https://www.instagram.com/redox_mikael/" target="_blank">
-          <img src="./assets/images/contact/instagram.png" >
+          <img src="./assets/images/home/instagram.png" >
+        </a>
+        <a href="https://vimeo.com/user65773366" target="_blank">
+          <img src="./assets/images/home/vimeo.png" >
         </a>
         <a href="" target="_blank">
-          <img src="./assets/images/layout/arrowdown.png" >
-        </a>
-        <a href="" target="_blank">
-          <img src="./assets/images/layout/arrowdown.png">
+          <img src="./assets/images/home/youtube.png">
         </a>
       </div>
     </div>
@@ -116,7 +117,7 @@
       </video>
     </div>-->
     <div class="title">
-      <h1>Travaux</h1>
+      <h2>Travaux</h2>
     </div>
   </section>
 
@@ -228,11 +229,11 @@
       <div class="contact-box">
         <div class="box">
           <img src="./assets/images/contact/phone.png ">
-          <p>Téléphone : <i>+41 79 108 66 18</i></p>
+          <p>Téléphone :</p><i>+41 79 108 66 18</i>
         </div>
         <div class="box">
           <img src="./assets/images/contact/mail.png">
-          <p>Mail : <i><a href="mailto:ruffieux.mikael@gmail.com">ruffieux.mikael @ gmail.com</a></i>
+          <p>Mail :</p><i>ruffieux.mikael @ gmail.com</i>
         </div>
       </div>
 
@@ -247,18 +248,18 @@
   </section>
 
   <footer>
+    <div class="bullet">
+      <a href="https://www.instagram.com/redox_mikael/" target="_blank">
+        <img src="./assets/images/home/instagram.png" >
+      </a>
+      <a href="https://vimeo.com/user65773366" target="_blank">
+        <img src="./assets/images/home/vimeo.png" >
+      </a>
+      <a href="" target="_blank">
+        <img src="./assets/images/home/youtube.png">
+      </a>
+    </div>
     <p>© Cool Kids Crew 2017</p>
   </footer>
 </body>
 </html>
-
-<!-- 
-Insta : https://www.instagram.com/redox_mikael/
-Vimeo : 
-Youtube :
-Icons url :
-  phone  ./assets/images/contact/phone.png 
-  insta   ./assets/images/contact/instagram.png
-  Mail  ./assets/images/contact/mail.png
-  Location  ./assets/images/contact/adress.png
--->
