mobile version finished

--- a/NEW/index.html
+++ b/NEW/index.html
@@ -90,14 +90,14 @@
 
       <div class="skills">
         <img src="./assets/images/about/video.png">
-        <p>TITLE<br>-<br>Bhdalfhadfldshfaldsh dkfhsdlfkhdfklh flkdhsf dsalkfalf khdsal  fkhasdf klasdh asdlkfhasl fhk</p>
+        <p>TITLE<br>-<br>Bhdalfhadfldshfaldsh fadsjkfésdlk jfjaédsk jsdék fjaséldk jsaédk jdsék jasdélkfj sdéalkfj séflkaj dséalkf jasdélf kjsd éfla dkfhsdlfkhdfklh flkdhsf dsalkfalf khdsal  fkhasdf klasdh asdlkfhasl fhk</p>
       </div>
     </section>
     </section>
     <section class="full-height" style="border-top:solid white 1px" id="team-anchor">
     <h1 style="text-align:right">Team</h1>
     <div align="center">
-      <p style="text-align:justify;width:80%">Redox Prod rassemble trois étudiants en informatique et communication, mais qui sont avant tout de grands passionnés dans leurs domaines respectif. Notre but est d'offrir un service de qualité, et à petit prix. Avec chacun ses forces et ses faiblesses, Redox Prod offre à votre organisation un service très complet et tout à fait compétent par rapport à notre statut. Une collaboration entre vous et nous, c'est pour vous un service à bas prix, et pour nous l'occasion de gagner de la renommée, et surtout de l'expérience.<br>Notre équipe : </p>
+      <p style="text-align:justify;width:80%">Redox Prod rassemble trois étudiants en informatique et communication, mais qui sont avant tout de grands passionnés dans leurs domaines respectif. Notre but est d'offrir un service de qualité, et à petit prix. Avec chacun ses forces et ses faiblesses, Redox Prod offre à votre organisation un service très complet et tout à fait compétent par rapport à notre statut. Une collaboration entre vous et nous, c'est pour vous un service à bas prix, et pour nous l'occasion de gagner de la renommée, et surtout de l'expérience.<br><br>Notre équipe : </p>
   </div>
     <section id="team" class="flex-box">
       <div class="member"><img src="https://scontent-mxp1-1.cdninstagram.com/vp/1208be370e91f3af08b01f2c1b4f9e82/5BBB1EC7/t51.2885-15/s640x640/sh0.08/e35/c182.0.715.715/32831668_1433875240092142_2428671527621754880_n.jpg"><p>MIKAËL "PABLO" RUFFIEUX<br>-<br>
@@ -126,7 +126,7 @@
     <div class="showreel">
       <iframe src="https://player.vimeo.com/video/267380360?portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
-    <h1 style="text-align:right" id="video-anchor">Vidéos</h1>
+    <h1 class="right" id="video-anchor">Vidéos</h1>
     <section id="gallery-video" style="border-bottom:solid white 1px" class="flex-gallery">
       <div class="gallery-item">
         <a data-fancybox href="https://vimeo.com/266120847">
@@ -206,7 +206,7 @@
       </div>
     </section>
     <div id="pics-anchor"></div>
-    <h1 style="text-align:right">Images</h1>
+    <h1 class="right">Images</h1>
     <section id="gallery-images" class="flex-gallery">
       <div class="gallery-item">
         <a href="./gallery1.html">
@@ -222,7 +222,7 @@
       </div>
     </section>
   </section>
-  <section id="contact" class="double-height">
+  <section id="contact">
     <div class="section-content" id="contact-anchor">
       <h1> Contact</h1>
       <p>Pour plus d'informations, pour un devis ou tout simplement pour dire bonjour, contactez-nous via ce formulaire, ou directement par téléphone ou courriel.</p>
