galleries pages update

--- a/index.html
+++ b/index.html
@@ -76,21 +76,20 @@
     <section id="services" class="flex-box">
       <div class="skills">
         <img src="./assets/images/about/camera.png">
-        <p>TITLE<br>-<br>Bhdalfhadfldshfaldsh dkfhsdlfkhdfklh flkdhsf lakdshf alsdkhfasdlkh dsalkfalf khdsal fhsadl fkhasdf klasdh asdlkfhasl fhk</p>
+        <p>PHOTOGRAPHIE / VIDÉO<br>-<br>Nous nous occupons de la couverture photo et vidéo de vos événements.</p>
       </div>
 
        <div class="skills">
-        <img src="./assets/images/about/photoshop.png">
-        <p>TITLE<br>-<br>Bhdalfhadfldshfaldsh dkfhsdlfkhdfklh flkdhsf lakdshf alsdkhfasdlkh dsalkfalf khdsal  fkhasdf klasdh asdlkfhasl fhk</p>
-      </div>
-      <div class="skills">
         <img src="./assets/images/about/clapperboard.png">
-        <p>TITLE<br>-<br>Bhdalfhadfldshfaldsh dkfhsdlfkhdfklh flkdhsf  alsdkhfasdlkh dsalkfalf khdsal fhsadl  klasdh asdlkfhasl fhk</p>
+        <p>PUBLICITÉ VIDÉO<br>-<br>Que ce soit pour la promotion d'un produit, d'un événement, ou de votre organisation en général, nous nous occupons de la création de votre spot publicitaire de A à Z.</p>
       </div>
-
       <div class="skills">
-        <img src="./assets/images/about/video.png">
-        <p>TITLE<br>-<br>Bhdalfhadfldshfaldsh fadsjkfésdlk jfjaédsk jsdék fjaséldk jsaédk jdsék jasdélkfj sdéalkfj séflkaj dséalkf jasdélf kjsd éfla dkfhsdlfkhdfklh flkdhsf dsalkfalf khdsal  fkhasdf klasdh asdlkfhasl fhk</p>
+        <img src="./assets/images/about/flyer.png">
+        <p>CRÉATIONS GRAPHIQUES<br>-<br>Flyers, logo, booklet, ... La création graphique de vos futurs projets imprimés, afin d'atteindre votre public cible.</p>
+      </div>
+      <div class="skills">
+        <img src="./assets/images/about/computer-graphic.png">
+        <p>CRÉATION DE SITE WEB<br>-<br>Nous nous occupons de mettre à jour votre site internet, ou d'en créer un nouveau, selon vos besoins et budgets, en vous offrant toutes les dernières technologies web du moment.</p>
       </div>
     </section>
     </section>
@@ -100,12 +99,12 @@
       <p style="text-align:justify;width:80%">Redox Prod rassemble trois étudiants en informatique et communication, mais qui sont avant tout de grands passionnés dans leurs domaines respectif. Notre but est d'offrir un service de qualité, et à petit prix. Avec chacun ses forces et ses faiblesses, Redox Prod offre à votre organisation un service très complet et tout à fait compétent par rapport à notre statut. Une collaboration entre vous et nous, c'est pour vous un service à bas prix, et pour nous l'occasion de gagner de la renommée, et surtout de l'expérience.<br><br>Notre équipe : </p>
   </div>
     <section id="team" class="flex-box">
-      <div class="member"><img src="https://scontent-mxp1-1.cdninstagram.com/vp/1208be370e91f3af08b01f2c1b4f9e82/5BBB1EC7/t51.2885-15/s640x640/sh0.08/e35/c182.0.715.715/32831668_1433875240092142_2428671527621754880_n.jpg"><p>MIKAËL "PABLO" RUFFIEUX<br>-<br>
-      Fondateur de Redox Prod</p></div>
-      <div class="member"><img src="https://scontent-mxp1-1.xx.fbcdn.net/v/t1.0-9/12804647_10205714622767570_4402294476133356045_n.jpg?_nc_cat=0&oh=f298c755dbac808b7c753cfb9af4828b&oe=5B7E635C"><p>KERAN "RUBY" KOCHER<br>-<br>
-      Cet homme est plutôt cool. Et il a un Nikon D7000.</p></div>
-      <div class="member"><img src="https://scontent-mxp1-1.xx.fbcdn.net/v/t1.0-9/12193516_751174411692780_6101474127719426871_n.jpg?_nc_cat=0&oh=974fda0f550417786edc2548f6ba8861&oe=5B81C796"><p>BENOÎT LÉO "EL PATRÒN" MAILLARD<br>-<br>
-      Etudiant en informatique à l'EPFL</p></div>
+      <div class="member"><img src="https://scontent-mxp1-1.cdninstagram.com/vp/1208be370e91f3af08b01f2c1b4f9e82/5BBB1EC7/t51.2885-15/s640x640/sh0.08/e35/c182.0.715.715/32831668_1433875240092142_2428671527621754880_n.jpg"><p>MIKAËL RUFFIEUX<br>-<br>
+      Vidéaste, graphiste et web-designer</p></div>
+      <div class="member"><img src="https://scontent-mxp1-1.xx.fbcdn.net/v/t1.0-9/12804647_10205714622767570_4402294476133356045_n.jpg?_nc_cat=0&oh=f298c755dbac808b7c753cfb9af4828b&oe=5B7E635C"><p>KERAN KOCHER<br>-<br>
+      Photographe et back end programmeur</p></div>
+      <div class="member"><img src="https://scontent-mxp1-1.xx.fbcdn.net/v/t1.0-9/12193516_751174411692780_6101474127719426871_n.jpg?_nc_cat=0&oh=974fda0f550417786edc2548f6ba8861&oe=5B81C796"><p>BENOÎT LÉO MAILLARD<br>-<br>
+      Back end programmeur</p></div>
     </section>
     </section>
   </section>
