contact sheet suspended

--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
           <p>Mail :</p><i>ruffieux.mikael @ gmail.com</i>
         </div>
       </div>
-
+<!--
       <form action="contact.php" method="post" align="center">
         <input type="text" name="name" maxlength="60" size="30" placeholder="Votre nom, prénom..*"></input>
         <input type="email" name="email" maxlength="60" size="30" placeholder="Votre e-mail..*"></input>
         <input type="text" name="subject" maxlength="60" size="30" placeholder="Sujet.."></input>
         <textarea name="message" maxlength="1000" rows="6" cols="25" placeholder="Votre message..*"></textarea>
         <input type="submit" value="Envoyer" name="contact">
-      </form>
+      </form>-->
     </div>
   </section>
 
