--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
     <section class="full-height" style="border-top:solid white 1px" id="team-anchor">
     <h1 style="text-align:right">Team</h1>
     <div align="center">
-      <p style="text-align:justify;width:80%">Redox Prod rassemble trois étudiants en informatique et communication, mais qui sont avant tout de grands passionnés dans leurs domaines respectif. Notre but est d'offrir un service de qualité, et à petit prix. Avec chacun ses forces et ses faiblesses, Redox Prod offre à votre organisation un service très complet et tout à fait compétent par rapport à notre statut. Une collaboration entre vous et nous, c'est pour vous un service à bas prix, et pour nous l'occasion de gagner de la renommée, et surtout de l'expérience.<br><br>Notre équipe : </p>
+      <p style="text-align:justify;width:80%">Redox Prod: une petite équipe qui voit les choses en grand ! Le label rassemble trois étudiants en informatique et communication, mais qui sont avant tout de grands passionnés dans leurs domaines respectifs. Notre but est d'offrir un service de qualité, et à petit prix. Redox Prod offre à votre organisation un service très complet et tout à fait compétent par rapport à notre statut.<br><br>Notre équipe : </p>
   </div>
     <section id="team" class="flex-box">
       <div class="member"><img src="https://scontent-mxp1-1.cdninstagram.com/vp/1208be370e91f3af08b01f2c1b4f9e82/5BBB1EC7/t51.2885-15/s640x640/sh0.08/e35/c182.0.715.715/32831668_1433875240092142_2428671527621754880_n.jpg"><p>MIKAËL RUFFIEUX<br>-<br>
       Vidéaste, graphiste et web-designer</p></div>
-      <div class="member"><img src="https://scontent-mxp1-1.xx.fbcdn.net/v/t1.0-9/12804647_10205714622767570_4402294476133356045_n.jpg?_nc_cat=0&oh=f298c755dbac808b7c753cfb9af4828b&oe=5B7E635C"><p>KERAN KOCHER<br>-<br>
-      Photographe et back end programmeur</p></div>
-      <div class="member"><img src="https://scontent-mxp1-1.xx.fbcdn.net/v/t1.0-9/12193516_751174411692780_6101474127719426871_n.jpg?_nc_cat=0&oh=974fda0f550417786edc2548f6ba8861&oe=5B81C796"><p>BENOÎT LÉO MAILLARD<br>-<br>
+      <div class="member"><img src="assets/images/team/keran.jpg"><p>KERAN KOCHER<br>-<br>
+      Photographe, front & back end programmeur</p></div>
+      <div class="member"><img src="assets/images/team/blm.jpg"><p>BENOÎT LÉO MAILLARD<br>-<br>
       Back end programmeur</p></div>
     </section>
     </section>
@@ -225,7 +225,7 @@
   <section id="contact">
     <div class="section-content" id="contact-anchor">
       <h1> Contact</h1>
-      <p>Pour plus d'informations, pour un devis ou tout simplement pour dire bonjour, contactez-nous <!--via ce formulaire, ou directement--> par téléphone ou courriel.</p>
+      <p>Pour plus d'informations, pour un devis ou tout simplement pour dire bonjour, contactez-nous via ce formulaire, ou directement par téléphone ou courriel.</p>
       <div class="contact-box">
         <div class="box">
           <img src="./assets/images/contact/phone.png ">
@@ -236,14 +236,13 @@
           <p>Mail :</p><i>ruffieux.mikael @ gmail.com</i>
         </div>
       </div>
-<!--
       <form action="contact.php" method="post" align="center">
         <input type="text" name="name" maxlength="60" size="30" placeholder="Votre nom, prénom..*"></input>
         <input type="email" name="email" maxlength="60" size="30" placeholder="Votre e-mail..*"></input>
         <input type="text" name="subject" maxlength="60" size="30" placeholder="Sujet.."></input>
         <textarea name="message" maxlength="1000" rows="6" cols="25" placeholder="Votre message..*"></textarea>
         <input type="submit" value="Envoyer" name="contact">
-      </form>-->
+      </form>
     </div>
   </section>
 
